# python_uv_nuitka_tui_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
app/: hello.py
tests/: test_hello.py
