[project]
name = "uv-nuitka-textual-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.83.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "nuitka>=2.4.8",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-textual-snapshot>=1.0.0",
]
